// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RubricItem changes the currently selected value when a circle is pressed 1`] = `
<View
  style={
    Object {
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 8,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={1}
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.add-comment-2"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Add Comment
      </Text>
    </Button>
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.description"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        View long description
      </Text>
    </Button>
  </View>
</View>
`;

exports[`RubricItem renders 1`] = `
<View
  style={
    Object {
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 8,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={1}
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.add-comment-2"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Add Comment
      </Text>
    </Button>
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.description"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        View long description
      </Text>
    </Button>
  </View>
</View>
`;

exports[`RubricItem renders an already selected grade 1`] = `
<View
  style={
    Object {
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 8,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={true}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={1}
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.add-comment-2"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Add Comment
      </Text>
    </Button>
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.description"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        View long description
      </Text>
    </Button>
  </View>
</View>
`;

exports[`RubricItem renders the selected custom grade 1`] = `
<View
  style={
    Object {
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 8,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={true}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.customize-grade-2"
      value="12"
    >
      12
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.add-comment-2"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Add Comment
      </Text>
    </Button>
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.description"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        View long description
      </Text>
    </Button>
  </View>
</View>
`;

exports[`RubricItem will not show the add comment button and will show the comment if there is one 1`] = `
<View
  style={
    Object {
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 8,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 8,
          "marginRight": 8,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={1}
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Button
      onPress={[Function]}
      style={
        Object {
          "fontSize": 14,
          "fontWeight": "500",
          "paddingRight": 16,
        }
      }
      testID="rubric-item.description"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "fontSize": 14,
                "fontWeight": "500",
                "paddingRight": 16,
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        View long description
      </Text>
    </Button>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <Image
        capInsets={
          Object {
            "bottom": 16,
            "left": 18,
            "right": 18,
            "top": 24,
          }
        }
        resizeMode="stretch"
        source={1}
        style={
          Object {
            "bottom": 0,
            "height": null,
            "left": 0,
            "margin": 0,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": -4,
            "width": null,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "paddingBottom": 8,
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "color": "#2D3B45",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        A comment
      </Text>
    </View>
    <Button
      onPress={[Function]}
      style={
        Object {
          "color": "#73818C",
          "fontSize": 16,
          "fontWeight": "600",
        }
      }
      testID="rubric-item.edit-comment-2"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
              Object {
                "color": "#374A59",
              },
              Object {
                "color": "#73818C",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Edit
      </Text>
    </Button>
  </View>
</View>
`;
